<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="login_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="search_the_inventory">Search the inventory</string>
    <string name="settings_text">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="sms_low_inventory_notifications">SMS Low-Inventory Notifications</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_message">Permission to send SMS messages is required for some features to work.\nYou may change your selection at any time in the settings menu.</string>
    <string name="permissions_later">Later</string>
    <string name="manage_permissions">Manage Permissions</string>
    <string name="add_an_item">Add an item</string>
    <string name="remove_an_item">Remove an item</string>
    <string name="edit_an_item">Edit an item</string>
    <string name="edit_item_title">Edit</string>
    <string name="item_name_hint">Item Name</string>
    <string name="quantity_hint">Quantity</string>
    <string name="confirm_edit">Confirm</string>
    <string name="cancel_edit">Cancel</string>
    <string name="create">Create</string>
    <string name="add_a_new_item_to_the_inventory">Add a new item to the inventory</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_item">Create New Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="change_app_permissions">Change App Permissions</string>
    <string name="logout">Logout</string>
    <string name="allow_the_app_to_send_sms_messages">Allow The App to Send SMS Messages</string>
    <string name="username_cannot_be_empty">Username cannot be empty.</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="an_account_with_that_username_already_exists_please_select_a_different_username_and_try_again">An account with that username already exists. Please select a different username and try again.</string>
    <string name="invalid_credentials_please_recheck_your_username_and_password_and_try_again">Invalid credentials. Please recheck your username and password and try again.</string>
</resources>