<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.EditActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/editToolbar"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit_item_title"
        app:navigationIcon="@drawable/arrow_back"
        app:menu="@menu/edit_menu">
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editToolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemEditNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemEditNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemEditQuantityTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/quantity_hint"
            app:layout_constraintEnd_toStartOf="@+id/itemEditSubtractButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEditNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemEditQuantityTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemEditSubtractButton"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            app:icon="@drawable/remove"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/itemEditQuantityTextInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/itemEditAddButton"
            app:layout_constraintTop_toTopOf="@+id/itemEditQuantityTextInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemEditAddButton"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            app:icon="@drawable/add"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/itemEditQuantityTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemEditQuantityTextInputLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelEditButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelEdit"
                android:text="@string/cancel_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="confirmEdit"
                android:text="@string/confirm_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/loading_overlay" />
</androidx.constraintlayout.widget.ConstraintLayout>